--- a/frontend/aider/src/styles/report-made.css
+++ b/frontend/aider/src/styles/report-made.css
@@ -1,6 +1,10 @@
 .report-made{
     padding: 25px;
     box-sizing: border-box;
+    width: 100%;
+    display: inline-block;
+    text-align: center;
+    overflow-x: hidden;
 }
 
 
